<?xml version="1.0" encoding="UTF-8"?>

<!--TODO (STEP 5: Design the result activity layout.)-->

<!--START-->

<!--1. Add the trophy image to the drawable folders.-->
<LinearLayout
    tools:context=".MainActivity"
    android:padding="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--END-->

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/result"
        android:layout_marginTop="25dp"
        android:id="@+id/tv_result"/>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/iv_trophy"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/image"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/hey_curious"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_congratulations"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        tools:text="Username"
        android:layout_marginTop="25dp"
        android:id="@+id/tv_name"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/secondary_text_dark"
        tools:text="Your Score is 9 out of 10"
        android:layout_marginTop="10dp" android:id="@+id/tv_score"/>

    <Button
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/finish"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_finish"/>

</LinearLayout>